--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <link
       rel="stylesheet"
-      href="./style.css"
+      href="./src/style.css"
     />
   </head>
 
@@ -60,6 +60,6 @@
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./src/script.js"></script>
   </body>
 </html>
